# gpd_ros

./: CMakeLists.txt  package.xml
include/gpd_ros/: grasp_messages.h
launch/: gpd_wrapper.launch  ur5.launch
msg/: GraspConfig.msg
src/gpd_ros/: grasp_detection_node.cpp  grasp_messages.cpp
